Migrate tests to junit5 and assertj